<resources>
    <string name="app_name">Calcola ora uscita</string>
    <string name="crash_report">Crash rilevato, preparo il report</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Impostazioni</string>
    <string name="action_exit">Uscita</string>
    <string name="welcomestring">Calcola ora di uscita</string>
    <string name="setOraIngresso">Adesso!</string>
    <string name="Label1">Large Text</string>
    <string name="updateOraIngresso">Imposta ora ingresso</string>
    <string name="buttonAnnulla">Annulla</string>
    <string name="buttonTimePicker">Scegli l\'ora</string>
    <string name="action_about">Informazioni</string>
    <string name="action_share">Condividi</string>
    <string name="Autore">Gabriele Galluzzo</string>

    <string name="screenShotExternalDir">Pictures</string>
    <string name="screenShotFilename">calcolaorauscita-screenshot</string>
    <string name="screenShotFileExtension">.png</string>
    <string name="fileDeletionProblem">Non sono riuscito a cancellare il precedente screenshot\nProva a farlo tu in:</string>

    <string name="CondividiCon">Condividi con…</string>
    <string name="ShareMimeType">image/png</string>

    <string name="TODO">TODO</string>
    <string name="TODO_MSG">Non ancora implementato</string>
    <string name="TODO_MSG2">Il valore per il calcolo dell\'ora di uscita è fissato a 7:42 per tutti i giorni</string>

    <string name="TIME_PICKER_TITLE">Scegli l\'ora</string>

    <string name="appwidget_text">Ora ingresso     </string>
    <string name="add_widget">Aggiungi widget</string>
    <string name="OraUscitaWidgetLBL">Ora uscita</string>
    <string name="OraUscitaValueWidgetLBL">--:--</string>
    <string name="OraIngressoValueWidgetLBL">--:--</string>

    <string name="ORA_INGRESSO_WIDGET">ORA_INGRESSO_WIDGET</string>
    <string name="MINUTO_INGRESSO_WIDGET">MINUTO_INGRESSO_WIDGET</string>
    <string name="default_hour_min_value">--:--</string>

    <string name="PREFS_NAME">CalcolaOraUscita</string>
    <string name="DEFAULT_PROFILO_ORA">7,7,7,7,7,7,7</string>
    <string name="DEFAULT_PROFILO_MINUTO">42,42,42,42,42,42,42</string>
    <string name="SEPARATORE_CAMPI">,</string>
    <string name="lunLBLValue">Lun</string>
    <string name="marLBLValue">Mar</string>
    <string name="merLBLValue">Mer</string>
    <string name="gioLBLValue">Gio</string>
    <string name="venLBLValue">Ven</string>
    <string name="sabLBLValue">Sab</string>
    <string name="domLBLValue">Dom</string>

    <string name="linear_widget_name">Calcola ora uscita lungo</string>
    <string name="square_widget_name">Calcola ora uscita quadrato</string>
    <string name="little_square_widget_name">Calcola ora uscita quadrato piccolo</string>
    <string name="DefaultDate">--/--/----</string>
    <string name="UltimoAggiornamento">Ultimo aggiornamento:</string>
    <string name="UltimoAgg">Ultimo agg.:</string>
    <string name="ProfiloOrarioLBL">Profilo orario</string>

    <string name="NotificationAlarmExitTitle">Calcola ora uscita</string>
    <string name="NotificationAlarmExitText">Ok, per oggi basta. E\' ora di uscire</string>
    <string name="NotificationAlarmExitTicker">E\' ora di uscire</string>
    <string name="NotificationAlarmExitToast">Ok, per oggi basta.\nE\' ora di uscire</string>

    <string name="NotificationStartText">Ora di uscita</string>
    <string name="NotificationStartTicker1">Ho calcolato la tua ora di uscita.\nDevi uscire alle</string>
    <string name="NotificationStartTicker2">Prenderai il buono pasto alle</string>

    <string name="NotificationStartTextAlarmSet">allarme</string>

    <string name="setAlarmToastInfo">Impostato allarme alle ore</string>
    <string name="btnRingTone">Ringtone</string>
    <string name="alarmIntentRingToneUri">KEY_TONE_URI</string>
    <string name="btnNotification">Notifica</string>

    <string name="timePickerCancel">Annulla</string>
    <string name="timePickerAccept">Ok</string>
    <string name="weekendLoader">Caricatore di weekend</string>

    <string name="weekendCaricato">Weekend correttamente caricato</string>
    <string name="weekendIsLoading">Weekend in fase di caricamento</string>

    <string name="alarmCancelYesNoDialog">Cancello l\'allarme impostato?</string>
    <string name="dialogYesButton">Si</string>
    <string name="dialogNoButton">No</string>
    <string name="title_activity_dialog">Stai entrando adesso?</string>
</resources>
