<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/margin_tiny"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffffff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcomestring"
        android:id="@+id/textWelcomeString"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updateOraIngresso"
        android:id="@+id/buttonUpdateOraIngresso"
        android:clickable="true"
        android:checked="false"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:enabled="false" />

    <AnalogClock
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/analogClock"
        android:layout_below="@+id/textWelcomeString"
        android:layout_centerHorizontal="true" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="23dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:orientation="horizontal"
                android:id="@+id/tableRow">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/lunLBLValue"
                    android:id="@+id/lunLBL"
                    android:paddingRight="@dimen/margin_medium"
                    android:elegantTextHeight="false"
                    android:editable="false"
                    android:fadeScrollbars="false"
                    android:textColor="@android:color/black"
                    android:paddingLeft="@dimen/margin_small" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/marLBLValue"
                    android:id="@+id/marLBL"
                    android:layout_column="3"
                    android:paddingLeft="@dimen/margin_small"
                    android:paddingRight="@dimen/margin_medium"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/merLBLValue"
                    android:id="@+id/merLBL"
                    android:layout_column="6"
                    android:paddingLeft="@dimen/margin_small"
                    android:paddingRight="@dimen/margin_medium"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/gioLBLValue"
                    android:id="@+id/gioLBL"
                    android:layout_column="7"
                    android:paddingLeft="@dimen/margin_small"
                    android:paddingRight="@dimen/margin_medium"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/venLBLValue"
                    android:id="@+id/venLBL"
                    android:layout_column="8"
                    android:layout_span="21"
                    android:textColor="@android:color/black"
                    android:paddingLeft="@dimen/margin_small"
                    android:paddingRight="@dimen/margin_medium" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/default_hour_min_value"
                    android:id="@+id/profiloLunVal"
                    android:textColor="@android:color/black"
                    android:paddingRight="@dimen/margin_medium"
                    android:clickable="true"
                    android:onClick="showTimePickerDialogProfilo"
                    android:enabled="true"
                    android:paddingLeft="@dimen/margin_small" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/default_hour_min_value"
                    android:id="@+id/profiloMarVal"
                    android:layout_column="3"
                    android:paddingLeft="@dimen/margin_small"
                    android:textColor="@android:color/black"
                    android:paddingRight="@dimen/margin_medium"
                    android:clickable="true"
                    android:onClick="showTimePickerDialogProfilo"
                    android:enabled="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/default_hour_min_value"
                    android:id="@+id/profiloMerVal"
                    android:layout_column="6"
                    android:paddingLeft="@dimen/margin_small"
                    android:textColor="@android:color/black"
                    android:paddingRight="@dimen/margin_medium"
                    android:clickable="true"
                    android:onClick="showTimePickerDialogProfilo"
                    android:enabled="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/default_hour_min_value"
                    android:id="@+id/profiloGioVal"
                    android:layout_column="7"
                    android:paddingLeft="@dimen/margin_small"
                    android:textColor="@android:color/black"
                    android:paddingRight="@dimen/margin_medium"
                    android:clickable="true"
                    android:onClick="showTimePickerDialogProfilo"
                    android:enabled="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/default_hour_min_value"
                    android:id="@+id/profiloVenVal"
                    android:layout_column="28"
                    android:textColor="@android:color/black"
                    android:paddingLeft="@dimen/margin_small"
                    android:paddingRight="@dimen/margin_medium"
                    android:clickable="true"
                    android:onClick="showTimePickerDialogProfilo"
                    android:enabled="true" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Ora ingresso"
        android:id="@+id/textView2"
        android:layout_above="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Ora uscita"
        android:id="@+id/textView3"
        android:layout_marginBottom="17dp"
        android:layout_above="@+id/buttonAnnulla"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setOraIngresso"
        android:id="@+id/buttonSetOraIngresso"
        android:layout_above="@+id/buttonUpdateOraIngresso"
        android:layout_centerHorizontal="true"
        android:enabled="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonAnnulla"
        android:id="@+id/buttonAnnulla"
        android:enabled="false"
        android:layout_alignBaseline="@+id/buttonSetOraIngresso"
        android:layout_alignBottom="@+id/buttonSetOraIngresso"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonTimePicker"
        android:id="@+id/buttonTimePicker"
        android:onClick="showTimePickerDialog"
        android:enabled="true"
        android:layout_alignTop="@+id/buttonSetOraIngresso"
        android:layout_toRightOf="@+id/textWelcomeString"
        android:layout_toEndOf="@+id/textWelcomeString"
        android:singleLine="true" />

    <TextView
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textOraIngresso"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignRight="@+id/analogClock"
        android:layout_alignEnd="@+id/analogClock" />

    <TextView
        android:layout_width="103dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textOraUscita"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/textOraIngresso"
        android:layout_alignStart="@+id/textOraIngresso" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/DefaultDate"
        android:id="@+id/dataAggiornamento"
        android:layout_below="@+id/analogClock"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
