<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="@dimen/widget_margin" android:background="@android:color/transparent"
    android:id="@+id/calcola_ora_uscitaWDG"
    android:clickable="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/abc_action_bar_subtitle_bottom_margin_material"
            android:background="@drawable/roundedrect"
            android:backgroundTint="@android:color/background_dark"
            android:clickable="false">

            <TextView android:id="@+id/appwidget_text" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appwidget_text"
                android:textColor="#ffffff" android:textSize="24sp" android:textStyle="bold|italic"
                android:contentDescription="@string/appwidget_text"
                android:background="@android:color/transparent"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:elegantTextHeight="false" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/OraUscitaWidgetLBL"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                android:contentDescription="@string/appwidget_text"
                android:background="@android:color/transparent"
                android:layout_below="@+id/appwidget_text"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/OraUscitaTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/OraUscitaValueWidgetLBL"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                android:contentDescription="@string/appwidget_text"
                android:background="@android:color/transparent"
                android:layout_below="@+id/OraIngressoTXT"
                android:layout_toRightOf="@+id/appwidget_text"
                android:paddingLeft="@dimen/abc_action_bar_subtitle_bottom_margin_material"
                android:layout_alignBottom="@+id/textView4"
                android:layout_alignRight="@+id/OraIngressoTXT"
                android:layout_alignEnd="@+id/OraIngressoTXT" />

            <TextView
                android:id="@+id/OraIngressoTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/OraIngressoValueWidgetLBL"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                android:contentDescription="@string/appwidget_text"
                android:background="@android:color/transparent"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/appwidget_text"
                android:layout_toEndOf="@+id/appwidget_text"
                android:paddingLeft="@dimen/abc_action_bar_subtitle_bottom_margin_material" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>