<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    android:background="@android:color/transparent"
    android:id="@+id/calcola_ora_uscitaWDG"
    android:clickable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/roundedrect"
        android:backgroundTint="@android:color/background_dark"
        android:clickable="false">

        <TextView
            android:id="@+id/OraUscitaTXT"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/OraUscitaValueWidgetLBL"
            android:textColor="#ffffff"
            android:textStyle="bold|italic"
            android:contentDescription="@string/appwidget_text"
            android:background="@android:color/transparent"
            android:paddingLeft="@dimen/abc_action_bar_subtitle_bottom_margin_material"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imageView2"
            android:layout_toEndOf="@+id/imageView2"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/OraIngressoTXT"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/OraIngressoValueWidgetLBL"
            android:textColor="#ffffff"
            android:textStyle="bold|italic"
            android:contentDescription="@string/appwidget_text"
            android:background="@android:color/transparent"
            android:paddingLeft="@dimen/abc_action_bar_subtitle_bottom_margin_material"
            android:textSize="24sp"
            android:layout_centerInParent="@+id/imageView"
            android:layout_alignBottom="@+id/imageView"
            android:layout_toRightOf="@+id/imageView"
            android:layout_toEndOf="@+id/imageView"
            android:layout_marginBottom="2dp" />

        <TextView
            android:id="@+id/OraBuonoPastoTXT"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/OraUscitaValueWidgetLBL"
            android:textColor="#ffffff"
            android:textStyle="bold|italic"
            android:contentDescription="@string/appwidget_text"
            android:background="@android:color/transparent"
            android:paddingLeft="@dimen/abc_action_bar_subtitle_bottom_margin_material"
            android:textSize="24sp"
            android:layout_centerInParent="@+id/imageView3"
            android:layout_alignBottom="@+id/imageView3"
            android:layout_toRightOf="@+id/imageView3"
            android:layout_toEndOf="@+id/imageView3"
            android:layout_marginBottom="4dp" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/imageView"
            android:src="@drawable/ic_exit_to_app_white_48dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/imageView2"
            android:src="@drawable/ic_launch_white_48dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/imageView3"
            android:src="@drawable/ic_description_white_48dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

</RelativeLayout>